Fixed home page images on mobile

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -58,7 +58,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1.5rem;
     text-align: center;
     background: url('../index/compressed/projects.jpg');
-    background-size: 100%;
+    background-size: 100%;   
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
 }
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1.5rem;
     text-align: center;
     background: url('../index/compressed/certifications.jpg');
-    background-size: 100%;
+    background-size: 100%;   
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
 }
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1.5rem;
     text-align: center;
     background: url('../index/compressed/software.jpg');
-    background-size: 100%;
+    background-size: 100%;   
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
 }
@@ -133,7 +133,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1.5rem;
     text-align: center;
     background: url('../index/compressed/resume.jpg');
-    background-size: 100%;
+    background-size: 100%;   
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
 }
@@ -155,6 +155,7 @@ footer {
     left: 50%; /*to center div!*/
     -webkit-transform: translate(-50%,-50%);
             transform: translate(-50%,-50%); /*to center div!*/
+    margin-bottom: 3rem;
 } 
 
 footer span {
@@ -170,7 +171,7 @@ footer span {
                 flex-direction: column;
         -webkit-box-align: center;
                 align-items: center;
-        margin-top: 15rem;
+        margin-top: 10rem;
     }
 
     .wrapper h1 {
@@ -180,11 +181,12 @@ footer span {
     #blockOne, #blockTwo, #blockThree, #blockFour {
         height: 18vw;
         width: 25vw;
+        background-size: cover;   /*to keep image responsive*/   
+        background-repeat: no-repeat;  /*to keep image responsive*/   
     }
 
     footer {
-        top:  175%;  /*to offset position: absolute*/
-        margin-bottom: 3rem;
+        top: 125%;  /*re-align footer for mobile devices*/
     }
 
 }
